improvement: 配置文件分离
线上docker同文件夹放配置文件，直接运行脚本即可

--- a/blog-springboot/src/main/resources/Dockerfile
+++ b/blog-springboot/src/main/resources/Dockerfile
@@ -1,5 +1,6 @@
 FROM java:8
 VOLUME /tmp
+COPY application.yml application.yml
 ADD blog-springboot-0.0.1.jar blog.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/blog.jar"]
 ENV TZ=Asia/Shanghai
