--- a/blog-springboot/pom.xml
+++ b/blog-springboot/pom.xml
@@ -119,6 +119,12 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>1.20</version>
         </dependency>
+        <!-- 阿里云短信 -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibabacloud-dysmsapi20170525</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
