--- a/blog-springboot/pom.xml
+++ b/blog-springboot/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>alibabacloud-dysmsapi20170525</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.dfabulich</groupId>
+            <artifactId>sitemapgen4j</artifactId>
+            <version>1.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
