--- a/blog-vue/blog/package.json
+++ b/blog-vue/blog/package.json
@@ -75,7 +75,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components":"off",
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
