--- a/blog-springboot/pom.xml
+++ b/blog-springboot/pom.xml
@@ -130,6 +130,13 @@
             <artifactId>sitemapgen4j</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.37.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
