--- a/blog-springboot/pom.xml
+++ b/blog-springboot/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>2.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.volcengine</groupId>
+            <artifactId>volcengine-java-sdk-ark-runtime</artifactId>
+            <version>LATEST</version>
+            </dependency>
         <!-- 阿里云oss-->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
